# asp

./: .gitignore  README.md  asp-whitepaper.tex  autoresearch.py  pyproject.toml  test100.py  test_field3d.py
.ralph/: best_viz_server.py
asp/: .ralphrc  README.md  __init__.py  config.py  types.py
asp/defense/: adversarial_roleplay.py  base.py  context_injection.py  router.py
asp/demo/: field3d.py  viz_server.py
asp/encoder/: attack_signature_db.py  embedding_adapter.py  geometry.py  intent_encoder.py
asp/gossip/: engine.py  peer.py  transport.py  vaccine.py
asp/llm/: adapter.py  llama_adapter.py  openai_adapter.py
asp/tee/: attestation.py  boundary.py  sanitizer.py
asp/telemetry/: emitter.py  protocol.py  schemas.py
asp/threshold/: node.py  registry.py  share.py  validator.py
tests/: conftest.py  test_attack_signature_db.py  test_defense_modules.py  test_e2e_pipeline.py  test_gossip_engine.py  test_intent_encoder.py  test_sanitizer.py  test_telemetry_protocol.py  test_threshold_validator.py
