[project]
name = "asp"
version = "0.1.0"
description = "Alignment Security Protocol -- defense-in-depth for LLM safety"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
llm = [
    "openai>=1.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
